--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button class="btn btn-primary" type="button"> Like </button>
       </div>
   <div class="col-6">
-          <img scr=picture1.jpg" class="img-thumbnail" style="widt;400px;height:500px;"/><br>
+          <img scr=Picture 1.jpg" class="img-thumbnail" style="widt;400px;height:500px;"/><br>
           <button class="btn btn-primary" type="button"> Like </button>
          </div>
        </div>
