--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <div class="container">
           <div class="row">
                <div class="col-6">
-                 <img src="jerlyn1.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+                 <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button"> Like</button>
                </div>
                <div class="col-6">
