--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                  <button class="btn btn-primary" type="button"> Like</button>
                </div>
                <div class="col-6">
-                 <img src="loyd2.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
+                 <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button"> Like</button>
                </div>
          </div>
