--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
           <div class="row">
                <div class="col-6">
                  <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
-                 <button class="btn btn-primary" type="button"> Like</button>
+                 <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
+                  <output id="countlike1"> 0 </output>
                </div>
                <div class="col-6">
-                 <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
-                 <button class="btn btn-primary" type="button"> Like</button>
+                 <img src="IMG_20240414_065835.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
+                 <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
+                  <output id="countlike2"> 0 </output>
                </div>
          </div>
       </div>
+      <script src="index.js"></script>
    </body>
 </html>
