--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
    <body>
        <div class="container">
           <div class="row">
-               <div class="col-6">
+               <div class="col-4">
                  <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
                   <output id="countLike1"> 0 </output>
                </div>
-               <div class="col-6">
+               <div class="col-4">
                  <img src="IMG_20240414_065835.jpg" class="img-thumbnail" style="width:500px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
                   <output id="countLike2"> 0 </output>
                </div>
+             <div class="col-4">
+                comment <br>
+                <input type="text" class="form-control" id="comment" />
+                <button class="btn bt-success" id=submit">submit </button>button>
+                <br>
+                <textarea class=control" id=commnentbox" rows="30"></textarea>
+
+             </div 
          </div>
       </div>
       <script src="index.js"></script>
