--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                </div>
              <div class="col-4">
                 comment <br>
-                <input type="text" class="form-control" id="comment" />
-                <button class="btn bt-success" id=submit">submit </button>
+                <input type="text" class="form-control" id="comment"/>
+                <button class="btn btn-success" id="submit">submit</button>
                 <br>
-                <textarea class=control" id=commnentbox" rows="30"></textarea>
+                <textarea class="form-control" id="commentbox" rows="20"></textarea>
 
              </div 
          </div>
