--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <output id="countLike2"> 0 </output>
                </div>
              <div class="col-4">
-                comment <br>
+                comments<br>
                 <input type="text" class="form-control" id="comment"/>
                 <button class="btn btn-success" id="submit">submit</button>
                 <br>
