--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
                   <output id="countLike2"> 0 </output>
                </div>
              <div class="col-4">
-                comments<br>
-                <input type="text" class="form-control" id="comment"/>
-                <button class="btn btn-success" id="submit">submit</button>
-                <br>
-                <textarea class="form-control" id="commentbox" rows="20"></textarea>
-
-             </div 
+                           Comments<br>
+                      <input type="text" class="form-control" id="comment"/>
+                      <button class="btn btn-success" id="submit">Submit</button>
+                    <br>  
+                      <textarea class="form-control" id="commentbox" rows="20"></textarea>
+                </div>  
          </div>
       </div>
       <script src="index.js"></script>
