--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-<body style= "background-color: #CDE8E6;"> 
+<body style= "background-color: Blue;"> 
 <div class="container">
   <div class="row">
     <div class="col-6">
-      <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="with:400px;height:500px;"/><br>
+      <img src="IMG_20240331_160727.jpg" class="img-thumbnail" style="with:500px;height:400px;"/><br>
         <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
         <output id="countLike1"> 0 </output> 
       <button class="btn btn-primary" type="button" id="btnDisLike1">dislike</button>
@@ -17,7 +17,7 @@
      </div>
     
       <div class="col-6">
-      <img src="IMG_20240414_065835.jpg" class="img-thumbnail" style="with:400px;height:500px;"/><br>
+      <img src="IMG_20240414_065835.jpg" class="img-thumbnail" style="with:500px;height:400px;"/><br>
         <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
           <output id="countLike2"> 0 </output>
            <button class="btn btn-primary" type="button" id="btnDisLike2">dislike</button>
