--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     </div>
 
     <div class="col-md-4 text-center mb-4">
-      <label id="product6">Rm Indigo</label>
+      <label id="product6">6.jpg</label>
       <img src="Rm.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product6" id="price6">20000.00</label>
       <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
-      <label id="product7">Jin The Astronaut</label>
+      <label id="product7">7.jpg</label>
       <img src="Jin.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product7" id="price7">100000.00</label>
       <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
