--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row justify-content-center">
     <div class="col-md-4 text-center mb-4">
       <label for="product1">click.jpg</label>
-      <img src="Jungkook.jpg" style="width:400px; height:500px;" class="img-thumbnail">
+      <img src="click.jpg" style="width:400px; height:500px;" class="img-thumbnail">
       <label for="price1" id="price1">28000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity">
     </div>
