--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   
     <div class="col-md-4 text-center mb-4">
       <label for="product2">ADV.jpg</label>
-      <img src="Taehyung.jpg" style="width:400px; height:500px;" class="img-thumbnail">
+      <img src="ADV.jpg" style="width:400px; height:500px;" class="img-thumbnail">
       <label for="price2" id="price2">72000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity">
     </div>
   
     <div class="col-md-4 text-center mb-4">
       <label for="product3">nmax.jpg</label>
-      <img src="Jimin.jpg" style="width:400px; height:500px;" class="img-thumbnail">
+      <img src="nmax.jpg" style="width:400px; height:500px;" class="img-thumbnail">
       <label for="price3" id="price3">94000.00</label>
       <input type="number" class="form-control" id="qty3" placeholder="Enter quantity">
     </div>
