--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <head>
     <style>
         body {
-            background-image: url('pngtree-metal-background-gray-image_387850.jpg');
+            background-image: url('click.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
