--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JAIME</title>
+  <title>jaime</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
@@ -12,55 +12,60 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 text-center">
-      <h2>INDO CONCEPT</h2>
+      <h2>collection</h2>
       <hr class="hr" />
     </div>
   </div>
   
   <div class="row justify-content-center">
     <div class="col-md-4 text-center mb-4">
-      <label id="product1">NO1</label>
+      <label id="product1">no1</label>
       <img src="click.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product1" id="price1">10000.00</label>
+      <label for="product1" id="price1">15000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-md-4 text-center mb-4">
-      <label id="product2">NO2</label>
-      <img src="ADV.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product2" id="price2">20000.00</label>
+      <label id="product2">no2</label>
+      <img src="ADV.jpg" " style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product2" id="price2">12000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-md-4 text-center mb-4">
-      <label id="product3">NO3</label>
+      <label id="product3">no3</label>
       <img src="nmax.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product3" id="price3">30000.00</label>
+      <label for="product3" id="price3">14000.00</label>
       <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
-      <label id="product4">NO4</label>
+      <label id="product4">no4</label>
       <img src="raider.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product4" id="price4">40000.00</label>
+      <label for="product4" id="price4">10000.00</label>
       <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
-      <label id="product5">NO5</label>
+      <label id="product5">no5</label>
       <img src="sniper.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product5" id="price5">50000.00</label>
+      <label for="product5" id="price5">18000.00</label>
       <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
-      <label id="product6">NO6</label>
+      <label id="product6">no6</label>
       <img src="2nmaxx.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product6" id="price6">60000.00</label>
+      <label for="product6" id="price6">20000.00</label>
       <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
     </div>
 
-   
+    <div class="col-md-4 text-center mb-4">
+      <label id="product7">no7</label>
+      <img src="Jin.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product7" id="price7">100000.00</label>
+      <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
+    </div>
 
     <div class="col-md-4">
       <label for="carts">Orders</label>
@@ -71,6 +76,6 @@
     </div>
   </div>
 </div>
-<script src="index.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
