--- a/index.html
+++ b/index.html
@@ -21,49 +21,49 @@
     <div class="col-md-4 text-center mb-4">
       <label id="product1">no1</label>
       <img src="click.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product1" id="price1">15000.00</label>
+      <label for="product1" id="price1">10000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-md-4 text-center mb-4">
       <label id="product2">no2</label>
       <img src="ADV.jpg" " style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product2" id="price2">12000.00</label>
+      <label for="product2" id="price2">20000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-md-4 text-center mb-4">
       <label id="product3">no3</label>
       <img src="nmax.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product3" id="price3">14000.00</label>
+      <label for="product3" id="price3">30000.00</label>
       <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
       <label id="product4">no4</label>
       <img src="raider.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product4" id="price4">10000.00</label>
+      <label for="product4" id="price4">40000.00</label>
       <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
       <label id="product5">no5</label>
       <img src="sniper.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product5" id="price5">18000.00</label>
+      <label for="product5" id="price5">50000.00</label>
       <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
       <label id="product6">no6</label>
       <img src="2nmaxx.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product6" id="price6">20000.00</label>
+      <label for="product6" id="price6">60000.00</label>
       <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-md-4 text-center mb-4">
       <label id="product7">no7</label>
-      <img src="Jin.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product7" id="price7">100000.00</label>
+      <img src=" " style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product7" id="price7">70000.00</label>
       <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
     </div>
 
