--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="col-md-4 text-center mb-4">
       <label id="product7">no7</label>
-      <img src=" " style="width:400px; height:500px;" class="img-thumbnail"/>
+      <img src="1720250913837.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product7" id="price7">70000.00</label>
       <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
     </div>
@@ -76,6 +76,6 @@
     </div>
   </div>
 </div>
-<script src="app.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
